test/cases/errors/cyclic-reexport-references/b.js
import { A } from "./cycle";

export const B = A;
